# SEP-UG-33

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LOCAL_WINDOWS_BUILD.md  Makefile  README.md  WINDOWS_TBB_STRATEGY.md  block.py  block_compressor.py  block_growth.h  block_growth.py  block_model  block_model.cpp  block_model.py  build_windows_local.ps1  build_windows_tbb.ps1  compileHelpNotes.txt  conanfile.txt  kd_tree.py  node.py  slices_section.py  test.py  test_case.txt  validate_test  validate_test.cpp  validate_test.py  vcpkg.json
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/workflows/: ci.yml  pr-checks.yaml
cmake/: toolchain-mingw.cmake
include/: block.h  block_growth.h  block_model.h  lru_cache.h  output_manager_std.h  thread_pool_std.h
scripts/: format-code.sh  setup-dev-environment.sh
src/: benchmark.cpp  block.cpp  block_growth.cpp  block_model.cpp  main.cpp  output_manager_std.cpp  thread_pool_std.cpp
tests/: compression_test.cpp  threading_test.cpp  validate_test.cpp
tests/data/: case1.txt  case2.txt
